# ethereum_proof_zkvm

./: Cargo.toml  README.md
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs  models.rs
methods/src/: lib.rs  models.rs
verifier/: Cargo.toml
verifier/src/: main.rs
