[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]

risc0-zkvm = { version = "1.3.0-rc.1" }
risc0-build = { version = "2.0.0-rc.1", default-features = false } 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
sha2 = "0.10"
hex = "0.4"
ethers = "1.0"
tokio = { version = "1", features = ["full"] }












 