[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = "1.3.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
sha2 = "0.10.7"
hex = "0.4.3"
ethers = {version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1", features = ["full"] }

# RISC Zero

[workspace.dependencies.risc0-build]
version = "2.0.0-rc.1"
features = ["unstable"]




[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }










 