[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
# RISC0 zkVM
risc0-zkvm = "1.2.5"
# For building the guest program
methods = { path = "../methods" }
# Ethereum interaction
ethers = { version = "2", features = ["rustls"] }
# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
# Hex utilities
hex = "0.4"
bincode = "1.3"
sha2 = "0.10"

