[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "2.0.0-rc.1" }
risc0-zkvm = { version = "1.3.0-rc.1"}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"


[dependencies]
risc0-zkvm = { version = "1.3.0-rc.1", default-features = false, features = ['std'] }
risc0-build = { version = "2.0.0-rc.1", default-features = false } 
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"




[package.metadata.risc0]
methods = ["guest"]
