[package]
name = "method"  # Make sure this matches your actual package name
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# RISC0 zkVM with std feature enabled
risc0-zkvm = { version = "1.2.5", default-features = false, features = ["std"] }
# Serialization support
serde = { version = "1.0", features = ["derive"] }
# Types for Ethereum data
primitive-types = { version = "0.12.1", feature = ["serde"]}